Fix: デザイン微調整

--- a/client/app/template.module.css
+++ b/client/app/template.module.css
@@ -30,6 +30,11 @@
   border-bottom: 3px solid #000;
 }
 
+.nav svg {
+  vertical-align: middle;
+  margin-bottom: 8px;
+}
+
 .padding {
   height: 60px;
 }
