--- a/client/app/template.module.css
+++ b/client/app/template.module.css
@@ -44,6 +44,7 @@
   flex: 1;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 5rem 0;
+  padding: 1rem 0;
+  width: 100%;
+  background-color: #f5f5f5;
 }
